import requests
from attacks import AttackManager
from report import ReportGenerator

class Main:
    def start(self):
        attack_manager = AttackManager()
        report_generator = ReportGenerator()
        attack_manager.perform_attacks()
        report = report_generator.generate_report()
        print(report)

if __name__ == "__main__":
    main = Main()
    main.start()
