
classDiagram
    class Main {
        +start() void
    }
    class AttackManager {
        +perform_attacks() void
        +sql_injection() void
        +xss_attack() void
        +brute_force_login() void
        +session_hijacking() void
    }
    class ReportGenerator {
        +generate_report() str
    }
    Main --> AttackManager
    AttackManager --> ReportGenerator
